# Sentinel-Fabric

./: .env.example  .gitignore  DEPLOYMENT.md  Sentinel Fabri V2.code-workspace  docker-compose.prod.yml  docker-compose.yml  history.md  render.yaml
.github/workflows/: build.yml  ci-cd.yml  main.yml  release.yml  test.yml
backend/: .env.example  Dockerfile  debug.txt  generate_weights.py  pyproject.toml  worker.py
backend/alembic/versions/: 7da2835770bb_add_verdict_model_tables.py  a3c91f4e8b12_add_entity_value_campaign_state_and_missing_tables.py  b2c91f4e8b13_add_tenant_and_cep_rule_tables.py
backend/app/: config.py  dependencies.py  edge_gateway.py  main.py  main_clean.py  metrics.py
backend/app/api/: admin.py  agents.py  auth.py  campaigns.py  cases.py  cep_rules.py  chatops.py  collaboration.py  compliance.py  entity_details.py  events_feed.py  events_grouped.py  findings.py  health.py  hunt.py  hunt_history.py  ingest.py  narrative.py  pipeline_status.py  posture.py  reporting.py  search.py  settings.py  sigma_rules.py  simulation.py  soar.py  threat_graph.py  vault.py
backend/app/connectors/: base.py  crowdstrike.py  generic_syslog.py  ms_sentinel.py  palo_alto.py  splunk_hec.py  suricata.py  windows_event.py  zeek.py
backend/app/consumers/: cep_consumer.py  event_consumer.py
backend/app/engine/: agentic_rag.py  compliance.py  decision_engine.py  feature_extractor.py  ioc_feed_manager.py  ioc_store.py  narrative.py  rag_retriever.py  risk_model.py  sigma_engine.py
backend/app/engine/sigma_rules/: credential_dumping_lsass.yml  data_exfiltration_large_transfer.yml  dcsync.yml  golden_ticket.yml  kerberoasting.yml  lateral_movement_wmi.yml  log4shell.yml  scheduled_task_persistence.yml  suspicious_powershell_download.yml
backend/app/engine/uql/: __init__.py  compiler.py  grammar.lark  nl_translator.py
backend/app/intelligence/: __init__.py  stix_graph.py  taxii_scheduler.py
backend/app/middleware/: auth.py  csrf.py  error_handler.py  metrics.py  rate_limit.py  security.py  tenant_isolation.py
backend/app/ml/: adversarial.py  ensemble.py  hst.py  meta_learner.py  temporal.py  vae.py
backend/app/pipeline/: redis_cep.py
backend/app/repositories/: clickhouse.py  inmemory.py  inmemory_redis.py  postgres.py  postgres_audit.py  qdrant_store.py  redis_store.py  scylla_repository.py
backend/app/schemas/: canonical_event.py
backend/app/services/: alerting.py  campaign_engine.py  compliance_digest.py  email_service.py  hunting.py  mitre_coverage.py  model_retrainer.py  pipeline.py  simulation_service.py  sse_broadcaster.py  threat_intel.py  triage_queue.py  vault_service.py
backend/app/services/agents/: tools.py  triage.py
backend/app/services/enrichment/: __init__.py  cve_enricher.py  shodan_enricher.py
backend/app/services/ingestion/: aws_cloudtrail.py  gcp_audit.py  ocsf_mapper.py  sentinel_connector.py  syslog_parser.py
backend/app/services/soar/: __init__.py  action_manifest.py  actions.py  container_executor.py  engine.py  notification_providers.py  sigma_mapper.py
backend/execution/: train_all_models.py
backend/models/: llm_fingerprint.pth  meta_learner.txt  temporal.pth  vae.pth
backend/scripts/: cic_ids_feature_extractor.py  evaluate_llm_fingerprint.py  evaluate_real_traffic.py  train_adversarial.py  train_baselines.py  train_models.py  training_pipeline.py
backend/tests/: conftest.py  test_agentic_rag.py  test_api_routes.py  test_decision_engine.py  test_integration.py  test_ioc_store.py  test_ml_models.py  test_phase33_verification.py  test_phase3_parity.py  test_pipeline.py  test_rate_limiting.py  test_schemas.py  test_sigma_engine.py
backend/tests/load_test/: locustfile.py
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  playwright.config.ts  replace.js  sentry.client.config.ts  sentry.edge.config.ts  tailwind.config.ts
frontend/design-system/sentinel-fabric/: MASTER.md
frontend/design-system/umbrix/: MASTER.md
frontend/e2e/: auth.spec.ts  campaigns.spec.ts  compliance.spec.ts  findings.spec.ts  soar-campaigns.spec.ts
frontend/playwright-report/: index.html
frontend/src/: instrumentation.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/contexts/: CommandPaletteContext.tsx  EntityContext.tsx  EventStreamContext.tsx  ThreatStateContext.tsx
frontend/src/hooks/: useEntityDetails.ts  useLiveEvents.ts
frontend/tests/: e2e.spec.ts
infra/: docker-compose.prod.yml  docker-compose.yml  generate-certs.bat  prometheus.yml
infra/nginx/: nginx.conf
scripts/: start.ps1
scripts/install/: install.ps1  install.sh
(+114 files in other folders)
